# company_wallet

./: MANIFEST.in  README.md  apps.json  payment_request.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
company_wallet/: __init__.py  custom_settings.py  generate_swagger.py  hooks.py  importer.py  install.py  modules.txt  notification_settings.py  patches.txt
company_wallet/api/: __init__.py  about_and_help_settings.py  bulk_payment_template.py  check_status.py  company_location.py  confirm_password_transaction.py  generate_puk.py  initialize_user_password.py  login_data.py  notification_view_log.py  offers.py  payment.py  query_reference.py  reset_password.py  reset_password_first_login.py  retry_transaction.py  session_logout.py  settings.py  users.py  utils.py  webhook.py
company_wallet/commands/: __init__.py  openapi.py
company_wallet/company_wallet/doctype/action_confirm_message/: action_confirm_message.js  action_confirm_message.json  action_confirm_message.py  (+1 more)
company_wallet/config/: desktop.py  docs.py
company_wallet/connect_sdk/: __init__.py  company.py  connect_base.py  payment.py
company_wallet/fixtures/: custom_field.json  letter_head.json
company_wallet/patches/: add_wallet_company_to_user.py  dump_updated_wc.py  initials_currency_list.py  set_role_profiles.py
company_wallet/public/js/: action_confirm_message.js  desk_navbar.js  set_first_login.js  table_controller.js
company_wallet/public/swagger/: index.html
company_wallet/translations/: ar.csv
company_wallet/www/swagger/: index.html  index.py
(+139 files in other folders)
