[project]
name = "company_wallet"
authors = [
    { name = "Fintechsys", email = "info@fintechsys.net"}
]
description = "This app for make a company wallet make bulk payments"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "docstring_parser~=0.16",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
known_frappe = ["frappe"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FRAPPE", "ERPNEXT", "HRMS", "FIRSTPARTY", "LOCALFOLDER"]
